--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "monolog/monolog": "1.*",
         "slim/slim": "2.*",
         "slim/views": "0.*",
-        "twig/twig": "1.24.*"
+        "twig/twig": "1.24.*",
+        "phpmailer/phpmailer": "^5.2",
+        "propel/propel": "^2.0@alpha"
     }
 }
